# RDM

./: .dockerignore  Dockerfile  README.md  compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  turtle_to_md_converter.py  vite.config.ts
.github/workflows/: deploy-gh-pages.yml
docs/: DescriptionSetProfile.md  RDM_Ontology_expansion_guidelines.md  RDM_Ontology_usage_guidelineds.md  RDM_Ontology_usage_guidelines.md
example/: example_research_data.json  example_research_data.ttl
frontend/: .dockerignore  Dockerfile  Gemfile  README.md  _config.yml  compose.yml  package.json  vite.config.ts
frontend/src/: App.tsx
ontology/: RDM ontology.owl  RDM_ontology.owl  RDM_ontology.ttl  RDM_ontology.xml  activitystreams2.owl  readme.md
ontology/DG-AP/: DG_AP_example.json  DG_AP_usage_guidelines.md  README.md  dg_ap.ttl
ontology/mapping/: mapping_summary.md  mapping_to_jpcoar.ttl  mapping_to_schemaorg.ttl
scripts/turtle_to_md/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirement.txt  turtle_to_md.py  turtle_to_md_converter.py
src/: App.tsx  index.html  main.tsx
src/components/: AppFooter.tsx  AppHeader.tsx
src/pages/: ErrorFallback.tsx  Home.tsx
userstories/: list.md
vocabulary/: Activity Types.md  classes.md
